part-1/ex-1.01/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: main-app-svc
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
