part-1/ex-1.01/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-app-ing
  namespace: main
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-app-svc
          servicePort: 2345
